{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 321,
  "lineage": "ac116de4-1fa5-461c-859e-c9145b5aab84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "deployment_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdec8be41b035825",
            "arn": "arn:aws:ec2:eu-west-3:352315636994:elastic-ip/eipalloc-0cdec8be41b035825",
            "association_id": "eipassoc-07f921dc704e92afa",
            "domain": "vpc",
            "id": "eipalloc-0cdec8be41b035825",
            "instance": "i-039b14863d2416abe",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0dffed2dc5b04e42d",
            "private_dns": "ip-172-31-34-73.eu-west-3.compute.internal",
            "private_ip": "172.31.34.73",
            "public_dns": "ec2-13-39-143-225.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.143.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.deployment_server",
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0064cb9280b026b00",
            "arn": "arn:aws:ec2:eu-west-3:352315636994:elastic-ip/eipalloc-0064cb9280b026b00",
            "association_id": "eipassoc-038293fd6536e3cea",
            "domain": "vpc",
            "id": "eipalloc-0064cb9280b026b00",
            "instance": "i-0366f38d5c44d28d5",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0d97902780fe26ef9",
            "private_dns": "ip-172-31-9-105.eu-west-3.compute.internal",
            "private_ip": "172.31.9.105",
            "public_dns": "ec2-51-44-110-111.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.44.110.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins_server",
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "deployment_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dc1ccdcec3b4eab",
            "arn": "arn:aws:ec2:eu-west-3:352315636994:instance/i-039b14863d2416abe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039b14863d2416abe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "shutting-down",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dffed2dc5b04e42d",
            "private_dns": "ip-172-31-34-73.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.73",
            "public_dns": "ec2-13-39-143-225.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.143.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a105b1ee83feb5da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "jenkins_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac0c28cdbc7b86ec",
            "tags": {
              "Name": "deployment-server"
            },
            "tags_all": {
              "Name": "deployment-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a88adc932fd2b3e1"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07dc1ccdcec3b4eab",
            "arn": "arn:aws:ec2:eu-west-3:352315636994:instance/i-0366f38d5c44d28d5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0366f38d5c44d28d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d97902780fe26ef9",
            "private_dns": "ip-172-31-9-105.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.105",
            "public_dns": "ec2-51-44-110-111.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.44.110.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09b6267c6a37cc14c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "jenkins_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b9fedacf0f64046",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a88adc932fd2b3e1"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:352315636994:security-group/sg-0a88adc932fd2b3e1",
            "description": "Allow custom TCP on port 8080 and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a88adc932fd2b3e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_sg",
            "name_prefix": "",
            "owner_id": "352315636994",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02bdf6b81afe97294"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:352315636994:security-group-rule/sgr-019ab47793b85646e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-019ab47793b85646e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a88adc932fd2b3e1",
            "security_group_rule_id": "sgr-019ab47793b85646e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_custom_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:352315636994:security-group-rule/sgr-0291ce7ef0ba259a6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0291ce7ef0ba259a6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a88adc932fd2b3e1",
            "security_group_rule_id": "sgr-0291ce7ef0ba259a6",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:352315636994:security-group-rule/sgr-0d5504c5b14208b1d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d5504c5b14208b1d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a88adc932fd2b3e1",
            "security_group_rule_id": "sgr-0d5504c5b14208b1d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    }
  ]
}